objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Billing_element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing element</label>
        <referenceTo>OF_BillingElement__c</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_element__c</fullName>
        <formula>OF_Listino__r.OF_CommercialElement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Prod__c</fullName>
        <externalId>true</externalId>
        <label>ID Prod</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Listino__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listino</label>
        <referenceTo>OF_Listino__c</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Commercial_element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial element</label>
        <referenceTo>OF_CommercialElement__c</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Contratto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contratto</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>OF_Pricebook</fullName>
        <active>true</active>
        <label>Pricebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Price_Book</fullName>
        <active>true</active>
        <label>PO Price Book</label>
    </recordTypes>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>